[package]
name = "oidc-authorizer"
version = "0.0.7"
edition = "2021"
license = "MIT"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
chrono = "0.4.31"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
lambda_runtime = "0.11.1"
reqwest = { version = "0.12.2", default_features = false, features = [
  "json",
  "rustls-tls",
] }
serde = "1.0.189"
serde_json = "1.0.107"
thiserror = "1.0.50"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
] }

[dev-dependencies]
httpmock = "0.6.8"
tracing-test = "0.2.4"
